update index and style

--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+    <title>Github test Project</title>
+
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
+</head>
+<body>
+ <h4> this is a test for Github </h4>
+</body>
 
 </html>
